--- a/package.json
+++ b/package.json
@@ -11,29 +11,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.11",
-    "@angular/common": "^7.2.11",
-    "@angular/compiler": "^7.2.11",
-    "@angular/core": "^7.2.11",
-    "@angular/forms": "^7.2.11",
-    "@angular/http": "^7.2.11",
-    "@angular/platform-browser": "^7.2.11",
-    "@angular/platform-browser-dynamic": "^7.2.11",
-    "@angular/router": "^7.2.11",
+    "@angular/animations": "^7.2.12",
+    "@angular/cdk": "~7.3.7",
+    "@angular/common": "^7.2.12",
+    "@angular/compiler": "^7.2.12",
+    "@angular/core": "^7.2.12",
+    "@angular/forms": "^7.2.12",
+    "@angular/http": "^7.2.12",
+    "@angular/material": "^7.3.7",
+    "@angular/material-moment-adapter": "^7.3.7",
+    "@angular/platform-browser": "^7.2.12",
+    "@angular/platform-browser-dynamic": "^7.2.12",
+    "@angular/router": "^7.2.12",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.7",
+    "moment": "^2.24.0",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.8.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.7",
-    "@angular/cli": "^7.3.7",
-    "@angular/compiler-cli": "^7.2.11",
-    "@angular/language-service": "^7.2.11",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.12",
+    "@angular/language-service": "^7.2.12",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
